fixed button:hover on mobile, cut/pasted media queries for better readability

--- a/css/index.css
+++ b/css/index.css
@@ -181,13 +181,13 @@ p {
   width: 60%;
   padding: 2%;
 }
-.navigation ul li {
-  font-size: 1.6rem;
-}
 @media (max-width: 500px) {
   .navigation ul {
     width: 80%;
   }
+}
+.navigation ul li {
+  font-size: 1.6rem;
 }
 footer {
   color: #22283B;
@@ -251,8 +251,23 @@ footer {
   justify-content: center;
   align-items: normal;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 25px;
+    padding: 4%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: normal;
+    align-items: normal;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -273,6 +288,13 @@ footer {
   padding: 2% 5%;
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    text-align: center;
+    padding: 6% 5%;
+  }
+}
 .home .walk .walk-text .btn:hover {
   color: #454A59;
   background-color: #F1F1F1;
@@ -282,25 +304,15 @@ footer {
   border-radius: 5px;
 }
 @media (max-width: 500px) {
-  .home .walk .walk-text .btn {
+  .home .walk .walk-text .btn:hover {
     width: 100%;
     text-align: center;
     padding: 6% 5%;
   }
 }
-@media (max-width: 500px) {
-  .home .walk .walk-text {
-    width: 100%;
-  }
-}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
-}
-.home .walk .walk-img img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
 }
 @media (max-width: 500px) {
   .home .walk .walk-img {
@@ -308,13 +320,8 @@ footer {
     margin-left: 0;
   }
 }
-@media (max-width: 500px) {
-  .home .walk {
-    margin-top: 25px;
-    padding: 4%;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: normal;
-    align-items: normal;
-  }
+.home .walk .walk-img img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
