--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,3 +13,9 @@
   padding: 2% 5%;
   border-radius: 5px;
 }
+
+.button-mobile() {
+  width: 100%;
+  text-align: center;
+  padding: 6% 5%;
+}
